force-app/main/default/objects/Charger_Sales_Orders_Junction__c/Charger_Sales_Orders_Junction__c.object-meta.xml
<CustomObject>
    <label>Charger Sales Order Junction</label>
    <nameField>
        <displayFormat>COSO-{000}</displayFormat>
        <label>Charger Sales Orders</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Charger Sales Orders Junction</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>