force-app/main/default/objects/Charger_Sales_Orders_Junction__c/fields/Charger_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Charger_Opportunity__c</fullName>
    <label>Charger Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Charger Sales Orders Junction</relationshipLabel>
    <relationshipName>Charger_Sales_Orders_Junction</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>