force-app/main/default/objects/Charger_Sales_Orders_Junction__c/fields/Charger_Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Charger_Sales_Order__c</fullName>
    <label>Charger Sales Order</label>
    <referenceTo>Sales_Order__c</referenceTo>
    <relationshipLabel>Charger Sales Orders Junction</relationshipLabel>
    <relationshipName>Charger_Sales_Orders_Junction</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>