force-app/main/default/objects/Charger_Sales_Orders_Junction__c/fields/Sales_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Number__c</fullName>
    <formula>Charger_Sales_Order__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Order Number</label>
    <type>Text</type>
</CustomField>