force-app/main/default/objects/Charger_Sales_Orders_Junction__c/fields/Sales_Order_Qty__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Qty__c</fullName>
    <formula>Charger_Sales_Order__r.Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Order Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>