force-app/main/default/objects/Charger_Sales_Orders_Junction__c/fields/Sales_Order_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Start_Date__c</fullName>
    <formula>Charger_Sales_Order__r.Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Order Start Date</label>
    <type>Date</type>
</CustomField>